tests/lean/overload2.lean.expected.out
  Set: pp::colors
Error (line: 2, pos: 9) application type mismatch, none of the overloads can be used
Candidates:
    Real::add : Real → Real → Real
    Int::add : Int → Int → Int
    Nat::add : Nat → Nat → Nat
Arguments:
    1 : Nat
    ⊤ : Bool
  Assumed: R
  Assumed: T
  Assumed: r2t
  Coercion r2t
  Assumed: t2r
  Coercion t2r
  Assumed: f
  Assumed: a
  Assumed: b
  Set: lean::pp::coercion
  Set: lean::pp::notation
f a b
f (r2t b) (t2r a)
  Assumed: g
f a b
Error (line: 20, pos: 10) ambiguous overloads
Candidates:
    g : R → T → R
    f : T → R → T
Arguments:
    b : R
    a : T
